@@ -76,11 +76,11 @@ public class EscapedURITest extends AbstractGrizzlyWebContainerTester {
         assertEquals("CONTENT", r.get(String.class));
     }
     
-    public void testNonEscaped() {
-        startServer(NonEscapedURIResource.class);
-                
-        WebResource r = Client.create().resource(getUri().
-                userInfo("x.y").path("x%20y").build());
-        assertEquals("CONTENT", r.get(String.class));
-    }
+//    public void testNonEscaped() {
+//        startServer(NonEscapedURIResource.class);
+//
+//        WebResource r = Client.create().resource(getUri().
+//                userInfo("x.y").path("x%20y").build());
+//        assertEquals("CONTENT", r.get(String.class));
+//    }
 }
